--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,9 +81,35 @@ body {
 .home {
     width: 100%;
     height: 100vh;
+    position: relative;
     background-image: url(../images/calm_bg.jpg);
     background-position: center top;
-	background-size:cover;
+    background-size:cover;
+}
+
+#intro {
+    margin: 0;
+}
+
+#down-btn {
+    position: absolute;
+    size: 10%;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.namePlate {
+    font-size: 50pt;
+    margin: 0;
+    position: absolute;
+    color: #fff;
+    text-shadow: 4px 4px #111;
+    text-align: center;
+    top: 25%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+
 }
 
 .navTrigger {
